# cam

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: cam.h  common.h
include/cam/: cam.h  cam.hpp  common.h  common.hpp
include/cam/complex/: complex.h
include/cam/fourier/: fourier.h
include/cam/integration/: integration.h
include/cam/linear/: linear.h  linear.hpp  linear_common.h  mat2.hpp  mat2x2.h  mat3.hpp  mat3x3.h  mat4.hpp  transforms.hpp  vec2.h  vec2.hpp  vec3.h  vec3.hpp  vec4.h  vec4.hpp
src/: cam.c  common.c  main.c  main.cpp
src/linear/: mat2.cpp  mat2x2.c  mat3.cpp  mat3x3.c  mat4.cpp  transforms.cpp  vec2.c  vec2.cpp  vec3.c  vec3.cpp  vec4.c  vec4.cpp
